# RoboticARM_PutToWall

./: README.md
aubo_description/meshes/aubo_i5l/: arm_mount_aubo.stl  arm_mount_aubo_long.stl  base_table_aubo.stl
aubo_description/meshes/gripper/vacuum/: Gripper_V1_1_Body.stl  Gripper_V1_1_Body_200mm.stl  Gripper_V1_1_Body_300mm.stl  Gripper_V1_1_Body_400mm.stl  Gripper_V1_1_Body_collision.dae  Gripper_V1_1_Cup.stl  Gripper_V1_1_Cup_collision.dae
aubo_description/urdf/: aubo.gazebo.xacro  aubo_i10.urdf  aubo_i5L.urdf  aubo_i5l.urdf.xacro
put_to_wall_manipulation/: CMakeLists.txt  package.xml
put_to_wall_manipulation/meshes/gripper/vacuum/: 7_dof_vacuum_no_camera_300mm.stl  7_dof_vacuum_no_camera_400mm(collision).dae  7_dof_vacuum_no_camera_400mm.stl  Gripper_Assembly_VM.stl  Gripper_Assembly_scaled.stl  Gripper_Collision.dae  Gripper_logimat.stl  Gripper_old_no_cover.stl  New_Suction.stl  New_Suction_Collision.dae  Part2.stl  Part2_Collision.dae  Part3_Collision.dae  Part3_New.stl  Suction_assembly_2.stl  logimat_gripper_body_305_mm_rev1.stl  logimat_gripper_body_305_mm_rev1_collision.dae  logimat_gripper_body_305mm.stl  logimat_gripper_body_305mm_collision.dae  logimat_suction_cup.stl  logimat_suction_cup_Collision.dae  logimat_suction_cup_rev1.stl  logimat_suction_cup_rev1_collision.dae
put_to_wall_manipulation/meshes/objects/: Octagon_Structure_V1.stl  Octagon_With_Wall_Structure_V1.stl
put_to_wall_manipulation/meshes/sensors/xtion_pro_live/: xtion_pro_live.dae
put_to_wall_manipulation/src/: generate_planning_scene.cpp  put_to_wall_octagon_simulation.cpp
put_to_wall_manipulation/ur_description/urdf/: ur10.urdf.xacro  ur10_left.urdf.xacro  ur10_right.urdf.xacro
put_to_wall_manipulation/ur_e_description/urdf/: ur10e.urdf.xacro  ur10e_left.urdf.xacro  ur10e_right.urdf.xacro
put_to_wall_moveit_config/: CMakeLists.txt  package.xml
put_to_wall_moveit_config/config/: aubo_i10_robot.srdf  aubo_i5L_robot.srdf  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml
put_to_wall_moveit_config/launch/: aubo_i10_robot_moveit_controller_manager.launch.xml  chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
